<resources>
    <string name="app_name">EduChat</string>
    <string name="time_out_err_msg">Timeout!!! Confirm that you have a working internet connection</string>
    <string name="network_err">Internet connection is not available</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="please_wait">Please Wait...</string>
    <string name="api_response_error">Error Occured While Loading Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="please_fill_in_your_details_below">Please fill in your details below</string>
    <string name="field_required">This field is required</string>
    <string name="please_input_valid_email_address">Please input valid email address</string>
</resources>
