<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fillViewport="true"
    tools:context="com.vggbudge.educhat.login.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/mid_space"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/mid_space"
            android:layout_marginBottom="@dimen/mid_space"
            android:text="@string/please_fill_in_your_details_below"
            android:textColor="@color/text_grey"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/surname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_space"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:textColor="@color/text_purple"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_space"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@color/text_purple"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/middle_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_space"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/middle_name"
                android:textColor="@color/text_purple"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_space"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textColor="@color/text_purple"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_background"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/very_large_space"
            android:layout_marginBottom="@dimen/large_space"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
